Move test to examples dir

--- a/test/files/index.html
+++ b/test/files/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>static server test</title>
+    <title>node-buffet test</title>
     <style>
       body { background-image: url(folder/Alice-white-rabbit.jpg); }
     </style>
   </head>
   <body>
-    <h1>stalwart</h1>
+    <h1>node-buffet</h1>
     <ul>
       <li><a href="hello.txt">hello.html</a></li>
     </ul>
