--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Node-buffet</title>
-  <meta name="description" content="Performance-oriented static file server">
+  <title>buffet</title>
+  <meta name="description" content="Performance-oriented static file server for Node.js">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -22,25 +22,21 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Node-buffet</h1>
+      <h1 class="title">buffet</h1>
     </header>
     <div id="container">
-      <p class="tagline">Performance-oriented static file server</p>
+      <p class="tagline">Performance-oriented static file server for Node.js</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
           <a href="https://github.com/carlos8f/node-buffet/tarball/master" class="download-button tar"><span>Download</span></a>
           <a href="https://github.com/carlos8f/node-buffet/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/carlos8f/node-buffet" class="code">View Node-buffet on GitHub</a>
+          <a href="https://github.com/carlos8f/node-buffet" class="code">View buffet on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h1>buffet</h1>
-
-<p>Performance-oriented static file server</p>
-
-<p><a href="http://travis-ci.org/carlos8f/node-buffet"><img src="https://secure.travis-ci.org/carlos8f/node-buffet.png" alt="build status"></a></p>
+          <p><a href="http://travis-ci.org/carlos8f/node-buffet"><img src="https://secure.travis-ci.org/carlos8f/node-buffet.png" alt="build status"></a></p>
 
 <h2>Idea</h2>
 
@@ -175,7 +171,7 @@ SOFTWARE.</p>
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/carlos8f" class="avatar"><img src="https://secure.gravatar.com/avatar/6a4474e38f5860bc6e4e0ca309157b8c?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/carlos8f">carlos8f</a> maintains <a href="https://github.com/carlos8f/node-buffet">Node-buffet</a></p>
+      <p><a href="https://github.com/carlos8f" class="avatar"><img src="https://secure.gravatar.com/avatar/6a4474e38f5860bc6e4e0ca309157b8c?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/carlos8f">carlos8f</a> maintains <a href="https://github.com/carlos8f/node-buffet">buffet</a></p>
 
 
       </div>
